# accelerate-opencl

./: README.md  accelerate-opencl.cabal
Data/Array/Accelerate/: OpenCL.hs
Data/Array/Accelerate/OpenCL/: CodeGen.hs  Compile.hs  Config.hs  Execute.hs  State.hs
Data/Array/Accelerate/OpenCL/Analysis/: Device.hs  Hash.hs  Launch.hs
Data/Array/Accelerate/OpenCL/Array/: Data.hs
Data/Array/Accelerate/OpenCL/CodeGen/: Data.hs  Monad.hs  Reduce.hs  Skeleton.hs  Tuple.hs  Util.hs
Data/Array/Accelerate/OpenCL/Internal/: Check.hs
clbits/: accelerate_opencl_shape.h  map.cl  reduce.cl
include/: accelerate.h
tests/unit/: AccelerateOpenCL_Test.hs  Fold_Test.hs  Map_Test.hs  ZipWith_Test.hs
