Name:                   accelerate-opencl
Version:                0.1
Cabal-version:          >= 1.6
Tested-with:            GHC >= 7.0.3
Build-type:             Simple
Synopsis:               OpenCL backend for the Data.Array.Accelerate library
Description:            Adds OpenCL support to accelerate
Author:                 Martin Dybdal
Maintainer:             Martin Dybdal <dybber@dybber.dk>
Stability:              Experimental

Data-files:           clbits/accelerate_opencl_shape.h

Library
  Build-depends:        base                 >= 4.3
                      , accelerate           >= 0.9
                      , pretty               >= 1.0
                      , language-c-quote     >= 0.3.0.0
                      , srcloc
                      , symbol
                      , hopencl              >= 0.1.1
                      , mtl                  >= 2.0
                      , fclabels             >= 0.9 && < 1.0
                      , bytestring
                      , zlib
                      , transformers         == 0.2.*
                      , directory
                      , filepath

  Exposed-modules:      Data.Array.Accelerate.OpenCL

  Other-modules:        Data.Array.Accelerate.OpenCL.CodeGen
                      , Data.Array.Accelerate.OpenCL.CodeGen.Util
                      , Data.Array.Accelerate.OpenCL.CodeGen.Data
                      , Data.Array.Accelerate.OpenCL.CodeGen.Skeleton
                      , Data.Array.Accelerate.OpenCL.CodeGen.Tuple
                      , Data.Array.Accelerate.OpenCL.Analysis.Hash
                      , Data.Array.Accelerate.OpenCL.Array.Data
                      , Data.Array.Accelerate.OpenCL.State
                      , Data.Array.Accelerate.OpenCL.Compile
                      , Data.Array.Accelerate.OpenCL.Execute
                      , Paths_accelerate_opencl

  Ghc-options:          -O2 -Wall -fno-warn-name-shadowing -fno-warn-type-defaults

  Extensions:           FlexibleContexts, QuasiQuotes, PatternGuards,
                        ScopedTypeVariables, GADTs, TypeFamilies,
                        ExistentialQuantification, BangPatterns, CPP,
                        TupleSections, TypeSynonymInstances,
                        TemplateHaskell, RankNTypes, TypeOperators
